fix: background extends if the content overflows

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,6 @@
-* {
+html, body {
+   height: 100%;
+   min-height: 100%;
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
@@ -24,7 +26,7 @@ body {
    justify-content: center;
    align-items: center;
    width: 100%;
-   height: 100vh;
+   min-height: 100vh;
    gap: 1.5rem;
 }
 
